src/objects/DFC_County__c.object
<CustomObject>
    <description>The County in England where the Dementia Friendly Community is located</description>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>England</fullName>
                </value>
                <value>
                    <fullName>Wales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DFC_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DFC Region</label>
        <referenceTo>DFC_DAA_Region__c</referenceTo>
        <relationshipLabel>DFC Counties</relationshipLabel>
        <relationshipName>DFC_Counties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Region of England</description>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>East of England</fullName>
                </value>
                <value>
                    <fullName>London</fullName>
                </value>
                <value>
                    <fullName>North East</fullName>
                </value>
                <value>
                    <fullName>North West</fullName>
                </value>
                <value>
                    <fullName>South East</fullName>
                </value>
                <value>
                    <fullName>South West</fullName>
                </value>
                <value>
                    <fullName>West Midlands</fullName>
                </value>
                <value>
                    <fullName>Yorkshire and the Humber</fullName>
                </value>
                <value>
                    <fullName>East Midlands</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DFC County</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Country__c</columns>
        <columns>DFC_Region__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Counties</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Counties_in_England</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Region__c</columns>
        <columns>DFC_Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>England</value>
        </filters>
        <label>Counties in England</label>
    </listViews>
    <listViews>
        <fullName>Counties_in_Wales</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>DFC_Region__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Wales</value>
        </filters>
        <label>Counties in Wales</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DFC Counties</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>